--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "body-parser": "^1.14.2",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.15.6",
     "log4js": "^0.6.29",
     "morgan": "^1.6.1",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.31.0",
     "serve-favicon": "^2.3.0"
   }
 }
