--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "bulma": "^0.6.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
